Bug 59541 - [swrast] pigit fbo-blit regression
Summary: [swrast] pigit fbo-blit regression
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Other (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-01-18 05:57 UTC by Vinson Lee
Modified: 2013-01-22 21:56 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2013-01-18 05:57:03 UTC
mesa: ca39c0f94a4e3cc25b6cc9507fb729b85140733a (master)

Run piglit fbo-blit on swrast.

$ ./bin/fbo-blit -auto
Mesa 9.1-devel implementation error: unexpected pixel size (0) in blit_nearest
Please report at bugs.freedesktop.org
Mesa 9.1-devel implementation error: unexpected pixel size (0) in blit_nearest
Please report at bugs.freedesktop.org
Mesa 9.1-devel implementation error: unexpected pixel size (0) in blit_nearest
Please report at bugs.freedesktop.org
Probe at (10,40)
  Expected: 1.000000 0.000000 0.000000
  Observed: 0.501961 0.501961 0.501961
Probe at (10,70)
  Expected: 1.000000 0.000000 0.000000
  Observed: 0.501961 0.501961 0.501961
Probe at (10,40)
  Expected: 1.000000 0.000000 0.000000
  Observed: 1.000000 0.000000 1.000000
PIGLIT: {'result': 'fail' }

bed997dabaada5e7c8081db08f93a6f1b5932e8b is the first bad commit
commit bed997dabaada5e7c8081db08f93a6f1b5932e8b
Author: Anuj Phogat <anuj.phogat@gmail.com>
Date:   Tue Dec 11 20:17:47 2012 -0800

    mesa: Add support to allow blitting to multiple color draw buffers
    
    This patch fixes a blitting case when drawAttachment->Texture ==
    readAttachment->Texture. It was causing an assertion failure in
    intel_miptree_attach_map() with gles3 conformance test case:
    framebuffer_blit_functionality_minifying_blit
    
    Number of changes in this file look scary. But most of them are caused
    by introducing a big for loop to support rendering to multiple color
    draw buffers.
    
    V2: Fixed a case when number of draw buffer attachments are zero.
    V3: Put a for loop in blit_nearest() and blit_linear() functions in to
        support blitting to multiple color draw buffers.
    V4: Remove variable declaration in for loop to avoid MSVC compilation
        issues.
    
    Signed-off-by: Anuj Phogat <anuj.phogat@gmail.com>
    Reviewed-by: Kenneth Graunke <kenneth@whitecape.org>
    Reviewed-by: Ian Romanick <ian.d.romanick@intel.com>

:040000 040000 98d5e6ea72f2fcf765cd8241682ab18c8081cc70 ee017ce78ded09098a4ded7a90e19130b53e4eea M	src
bisect run success
Comment 1 Brian Paul 2013-01-22 21:56:43 UTC
Fixed with commit 728bf86a23f6de137c0871ea87b09e75e55468a9


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.